small corrections for aligned buttons and good font color + font size

--- a/client/src/app/components/exchange-letters-gui/exchange-letters-gui.component.scss
+++ b/client/src/app/components/exchange-letters-gui/exchange-letters-gui.component.scss
@@ -26,10 +26,6 @@
     box-shadow: 0 5px #666;
     transform: translateY(4px); 
 }
-.button:active {
-    box-shadow: 0 5px #666;
-    transform: translateY(4px); 
-}
 .fieldset{
     border:transparent;
 }
